fix: use ProcessBuilder to prevent path-space bugs and pipe deadlock in gitPush